<resources>
    <string name="app_name">SingleActivityNavigation</string>
    <string name="fragment1">Home</string>
    <string name="fragment2">Profile</string>
    <string name="fragment3">Settings</string>
    <string name="fragment4">About</string>
    <string name="profileButton">Profile</string>
    <string name="settingsButton">Settings</string>
    <string name="aboutButton">About</string>
    <string name="backButton">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>